# TorchSTEPS

./: .gitignore  CONTRIBUTORS.md  LICENSE  README.md  pyproject.toml  pyvenv.cfg  requirements.in  requirements.txt
runs/: events.out.tfevents.1746870084.archlinux.538841.0  events.out.tfevents.1746879222.archlinux.70865.0  events.out.tfevents.1746879301.archlinux.73354.0  events.out.tfevents.1746879645.archlinux.84680.0  events.out.tfevents.1746879961.archlinux.94758.0  events.out.tfevents.1747015728.archlinux.1131880.0  events.out.tfevents.1747016379.archlinux.1152096.0  events.out.tfevents.1747016768.archlinux.1165015.0  events.out.tfevents.1747017044.archlinux.1173370.0
src/: convlstm.py  dataset.py  displayRadar.py  extrapolate.py  grabRadarSG.py  loadRadar.py  main.py  misc.py  model_graph  out.prof  torchLSTM.py  train.py
src/pySTEPS/: grabRadarSG.py  grabRadarSGBulk.py  loadRadar.py  tradPred.py
tests/: test-torchLSTM.py  test_loadRadar.py  test_torchLSTM.py
