[tool.poetry]
name = "TorchSTEPS"
version = "0.1.0"
description = "A WIP project using PySTEPS and PyTorch to accurately nowcast the weather"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"

# Nowcasting Algorithms
pysteps = { git = "https://github.com/pySTEPS/pysteps" }
cartopy = "*"

# Machine Learning & Deep Learning
torch = { version = "^2.0.1", source = "pytorch-cpu" }
torchvision = { version = ">=0.15.2", source = "pytorch-cpu" }
torchaudio = { version = "^2.0.2", source = "pytorch-cpu" }
# For CUDA variants, you can override these manually in poetry.lock or use extras

# Speed up computation
numpy = "*"
scipy = "*"
pyfftw = "*"

# Misc
requests = "*"
scikit-image = "*"

# Logging
tensorboard = "*"
matplotlib = "*"
tqdm = "*"

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
